# quickcell

./: .gitignore  AppImageBuilder.yml  README.md  pyproject.toml  quickcell.py  requirements.txt
.github/workflows/: ci.yml  release.yml
tests/: test_quickcell.py
