[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "quickcell"
version = "1.1.0"
description = "A minimal GNOME/Linux read-only viewer for Excel (.xlsx) files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "PyGObject>=3.42.0",
    "PyCairo>=1.20.0",
    "openpyxl>=3.0.0",
]

[project.scripts]
quickcell = "quickcell:main"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"quickcell.py" = ["E402"]

[tool.setuptools]
py-modules = ["quickcell"]
